@@ -11,6 +11,8 @@ Changes in version 1.1
 
 * Added demo program for different probability distributions (ISSUE#2).
 
+* Added method to the DataSet class for calculating the harmonic mean. 
+
 
 Changes in version 1.0.2
 ------------------------
